--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/styles.css">
   <title>Интернет-магазин гаджетов &laquo;Device&raquo;</title>
@@ -12,7 +11,10 @@
   <header class="header">
     <nav class="main-nav">
       <a class="logo" href="index.html">
-        <img class="logo__img" src="" alt="Логотип" width="145" height="36">
+        <svg class="logo__img" role="img" width="145" height="36" viewBox="0 0 145 36" fill="#000000" xmlns="http://www.w3.org/2000/svg" aria-label="Логотип.">
+          <path d="M27.22 0v35.3h-7.6v-2.4c-1.7 1.9-4.1 3.1-7.51 3.1C5.5 36 0 30.2 0 22.7 0 15.2 5.5 9.4 12.1 9.4c3.41 0 5.91 1.2 7.51 3.1V0h7.6Zm-7.6 22.7c0-3.8-2.5-6.2-6.01-6.2-3.5 0-6 2.4-6 6.2 0 3.8 2.5 6.2 6 6.2 3.5-.1 6-2.4 6-6.2ZM43.73 29.2c2.1 0 3.8-.8 4.8-1.9l6.1 3.5c-2.5 3.4-6.2 5.2-11 5.2-8.6 0-14.01-5.8-14.01-13.3 0-7.5 5.4-13.3 13.4-13.3 7.41 0 12.82 5.7 12.82 13.3 0 1.1-.1 2.1-.3 3H37.63c1 2.6 3.3 3.5 6.1 3.5Zm4.6-9.1c-.8-2.9-3.1-4-5.4-4-2.9 0-4.8 1.4-5.5 4h10.9ZM82.16 10.1l-9.31 25.2h-8.6l-9.31-25.2h8.4l5.3 16 5.31-16h8.2ZM83.46 10.1h7.6v25.2h-7.6V10.1ZM93.67 22.7c0-7.5 5.7-13.3 13.4-13.3 4.9 0 9.21 2.6 11.41 6.5l-6.6 3.8c-.9-1.8-2.7-2.8-4.9-2.8-3.3 0-5.71 2.4-5.71 5.8 0 3.5 2.4 5.8 5.7 5.8 2.2 0 4.1-1.1 4.9-2.8l6.61 3.8c-2.1 3.9-6.4 6.5-11.4 6.5-7.71 0-13.41-5.8-13.41-13.3ZM132.9 29.2c2.1 0 3.8-.8 4.8-1.9l6.1 3.5c-2.5 3.4-6.2 5.2-11 5.2-8.61 0-14.02-5.8-14.02-13.3 0-7.5 5.5-13.3 13.41-13.3 7.4 0 12.81 5.7 12.81 13.3 0 1.1-.1 2.1-.3 3h-17.91c1 2.6 3.3 3.5 6.1 3.5Zm4.7-9.1c-.8-2.9-3.1-4-5.4-4-2.91 0-4.81 1.4-5.51 4h10.9Z" fill="#000"/>
+          <path d="M83.46 0v10.1L91.06 0h-7.6Z"/>
+        </svg>
       </a>
       <form class="search" action="https://echo.htmlacademy.ru/courses" method="post">
         <label class="visually-hidden" for="search">Поиск по сайту.</label>
@@ -33,7 +35,7 @@
       </ul>
       <ul class="site-nav">
         <li class="site-nav__item">
-          <a class="site-nav__link" href="#">Каталог товаров</a>
+          <a class="site-nav__link" href="catalog.html">Каталог товаров</a>
           <ul class="submenu">
             <li class="submenu__item">
               <a class="submenu__link">Виртуальная реальность</a>
@@ -74,7 +76,7 @@
       <ol class="slider">
         <li class="slider__item">
           <h3 class="visually-hidden">Квадрокоптер.</h3>
-          <img class="slider__img" src="" alt="Квадрокоптер с лазерным указателем.">
+          <img class="slider__img" src="image/content/quadrocopter.png" width="560" height="560" alt="Квадрокоптер с лазерным указателем.">
           <p class="slider__title">Порхает как бабочка, жалит как пчела!</p>
           <p class="slider__description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
           <a class="slider__button button" href="#">Подробнее</a>
@@ -87,7 +89,7 @@
         </li>
         <li class="slider__item">
           <h3 class="visually-hidden">Фитнес-браслет.</h3>
-          <img class="slider__img" src="" alt="Черный фитнес-браслет с ЖК дисплеем.">
+          <img class="slider__img" src="image/content/watch.png" width="560" height="560" alt="Черный фитнес-браслет с ЖК дисплеем.">
           <p class="slider__title">Худеем правильно!</p>
           <p class="slider__description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a class="slider__button button" href="#">Подробнее</a>
@@ -98,7 +100,7 @@
         </li>
         <li class="slider__item">
           <h3 class="visually-hidden">Селфи палка.</h3>
-          <img class="slider__img" src="" alt="Три телескопические палки для селфи.">
+          <img class="slider__img" src="image/content/monopods.png" width="560" height="560" alt="Три телескопические палки для селфи.">
           <p class="slider__title">Делай селфи, как Бен Стиллер! </p>
           <p class="slider__description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
           <a class="slider__button button" href="#">Подробнее</a>
@@ -144,7 +146,7 @@
       </ul>
     </section>
     <section class="services">
-      <h2 class="visually-hidden">Наши приемущества</h2>
+      <h2 class="visually-hidden">Сервисы</h2>
       <dl class="services__list">
         <dt class="services__term">Доставка</dt>
         <dd class="services__definition">
@@ -201,7 +203,10 @@
   </main>
   <footer class="footer">
     <a class="logo" href="index.html">
-      <img class="logo__img logo__img--footer" src="" alt="Логотип.">
+      <svg class="logo__img" role="img" width="145" height="36" viewBox="0 0 145 36" fill="#FFC700" xmlns="http://www.w3.org/2000/svg" aria-label="Логотип.">
+        <path d="M27.22 0v35.3h-7.6v-2.4c-1.7 1.9-4.1 3.1-7.51 3.1C5.5 36 0 30.2 0 22.7 0 15.2 5.5 9.4 12.1 9.4c3.41 0 5.91 1.2 7.51 3.1V0h7.6Zm-7.6 22.7c0-3.8-2.5-6.2-6.01-6.2-3.5 0-6 2.4-6 6.2 0 3.8 2.5 6.2 6 6.2 3.5-.1 6-2.4 6-6.2ZM43.73 29.2c2.1 0 3.8-.8 4.8-1.9l6.1 3.5c-2.5 3.4-6.2 5.2-11 5.2-8.6 0-14.01-5.8-14.01-13.3 0-7.5 5.4-13.3 13.4-13.3 7.41 0 12.82 5.7 12.82 13.3 0 1.1-.1 2.1-.3 3H37.63c1 2.6 3.3 3.5 6.1 3.5Zm4.6-9.1c-.8-2.9-3.1-4-5.4-4-2.9 0-4.8 1.4-5.5 4h10.9ZM82.16 10.1l-9.31 25.2h-8.6l-9.31-25.2h8.4l5.3 16 5.31-16h8.2ZM83.46 10.1h7.6v25.2h-7.6V10.1ZM93.67 22.7c0-7.5 5.7-13.3 13.4-13.3 4.9 0 9.21 2.6 11.41 6.5l-6.6 3.8c-.9-1.8-2.7-2.8-4.9-2.8-3.3 0-5.71 2.4-5.71 5.8 0 3.5 2.4 5.8 5.7 5.8 2.2 0 4.1-1.1 4.9-2.8l6.61 3.8c-2.1 3.9-6.4 6.5-11.4 6.5-7.71 0-13.41-5.8-13.41-13.3ZM132.9 29.2c2.1 0 3.8-.8 4.8-1.9l6.1 3.5c-2.5 3.4-6.2 5.2-11 5.2-8.61 0-14.02-5.8-14.02-13.3 0-7.5 5.5-13.3 13.41-13.3 7.4 0 12.81 5.7 12.81 13.3 0 1.1-.1 2.1-.3 3h-17.91c1 2.6 3.3 3.5 6.1 3.5Zm4.7-9.1c-.8-2.9-3.1-4-5.4-4-2.91 0-4.81 1.4-5.51 4h10.9Z"/>
+        <path d="M83.46 0v10.1L91.06 0h-7.6Z"/>
+      </svg>
     </a>
     <address class="footer__address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
     <ul class="footer-nav">
@@ -229,7 +234,7 @@
       </li>
     </ul>
     <a class="copyright" href="https://htmlacademy.ru/" target="_blank">
-      <img class="copyright__img" src="" alt="Логотип HTML Академии">
+      <img class="copyright__img" src="image/content/logo-htmlacademy.svg" width="115" height="33" alt="Логотип HTML Академии">
     </a>
   </footer>
 </body>
