Сделана базовая стилизация

--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
         <a class="user-nav__link" href="#">Коля Петухов</a>
       </li>
       <li class="user-nav__item">
-        <a class="user-nav__link" href="#">Выйти</a>
+        <a class="user-nav__link user-nav__link--logined" href="#">Выйти</a>
       </li>
       <li class="user-nav__item">
         <a class="user-nav__link" href="#">Сравнить</a>
@@ -41,22 +41,22 @@
         <a class="site-nav__link" href="#">Каталог товаров</a>
         <ul class="submenu">
           <li class="submenu__item">
-            <a class="submenu__link">Виртуальная реальность</a>
+            <a class="submenu__link" href="#">Виртуальная реальность</a>
           </li>
           <li class="submenu__item">
-            <a class="submenu__link">Моноподы для cелфи</a>
+            <a class="submenu__link" href="#">Моноподы для cелфи</a>
           </li>
           <li class="submenu__item">
-            <a class="submenu__link">Экшн-камеры</a>
+            <a class="submenu__link" href="#">Экшн-камеры</a>
           </li>
           <li class="submenu__item">
-            <a class="submenu__link">Фитнес-браслеты</a>
+            <a class="submenu__link" href="#">Фитнес-браслеты</a>
           </li>
           <li class="submenu__item">
-            <a class="submenu__link">Умные часы</a>
+            <a class="submenu__link" href="#">Умные часы</a>
           </li>
           <li class="submenu__item">
-            <a class="submenu__link">Квадрокоптеры</a>
+            <a class="submenu__link" href="#">Квадрокоптеры</a>
           </li>
         </ul>
       </li>
@@ -73,7 +73,7 @@
   </nav>
 </header>
 <main class="main">
-  <h1 class="main__title">Моноподы для селфи</h1>
+  <h1 class="main__title main-title">Моноподы для селфи</h1>
   <ul class="breadcrumbs">
     <li class="breadcrumbs__item">
       <a class="breadcrumbs__link" href="index.html">Главная</a>
@@ -163,8 +163,18 @@
       </select>
       <button class="visually-hidden" type="submit">Отсортировать продукты</button>
       <div class="sort__buttons">
-        <a class="sort__button sort__button--asc" href="#"><span class="visually-hidden">По возрастанию</span></a>
-        <a class="sort__button sort__button--desc" href="#"><span class="visually-hidden">По убыванию</span></a>
+        <a class="sort__button sort__button--asc" href="#">
+          <svg width="11" height="10" viewBox="0 0 11 10" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#a)"><path d="m5.5 0 5 10H.5" /></g><defs><clipPath id="a"><path d="M11 10H0V0h11z"/></clipPath></defs>
+          </svg>
+          <span class="visually-hidden">По возрастанию</span>
+        </a>
+        <a class="sort__button sort__button--desc" href="#">
+          <svg width="11" height="10" viewBox="0 0 11 10" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#a)"><path d="M5.5 10 .5 0h10"/></g><defs><clipPath id="a"><path d="M0 0h11v10H0z"/></clipPath></defs>
+          </svg>
+          <span class="visually-hidden">По убыванию</span>
+        </a>
       </div>
     </form>
   </section>
@@ -210,13 +220,13 @@
     </div>
     <a class="products__more" href="#">Загрузить ещё</a>
     <div class="pagination">
-      <a class="pagination__link pagination__link--back pagination__link--disabled">Назад</a>
-      <a class="pagination__link pagination__link--current">1</a>
-      <a class="pagination__link" href="#">2</a>
-      <a class="pagination__link" href="#">3</a>
-      <a class="pagination__link" href="#">...</a>
-      <a class="pagination__link" href="#">15</a>
-      <a class="pagination__link pagination__link--forward" href="#">Назад</a>
+      <a class="pagination__link pagination__link--button pagination__link--disabled">Назад</a>
+      <a class="pagination__link pagination__link--page pagination__link--current">1</a>
+      <a class="pagination__link pagination__link--page" href="#">2</a>
+      <a class="pagination__link pagination__link--page" href="#">3</a>
+      <a class="pagination__link pagination__link--page" href="#">...</a>
+      <a class="pagination__link pagination__link--page" href="#">15</a>
+      <a class="pagination__link pagination__link--button" href="#">Назад</a>
     </div>
   </section>
 </main>
@@ -243,13 +253,28 @@
   <span class="separator"></span>
   <ul class="social">
     <li class="social__item">
-      <a class="social__link" href="https://t.me/htmlacademy" target="_blank"><span class="visually-hidden">Telegram</span></a>
+      <a class="social__link" href="https://t.me/htmlacademy" target="_blank">
+        <svg width="14" height="12" viewBox="0 0 14 12" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12.44.07.62 4.63c-.8.33-.8.78-.14.98l3.03.94 7.02-4.43c.33-.2.64-.09.39.13l-5.7 5.13-.2 3.13c.3 0 .44-.14.61-.3l1.48-1.44 3.06 2.27c.57.31.97.15 1.12-.53l2-9.48c.21-.83-.3-1.2-.85-.96Z"/>
+        </svg>
+        <span class="visually-hidden">Telegram</span>
+      </a>
     </li>
     <li class="social__item">
-      <a class="social__link" href="https://www.youtube.com/user/htmlacademyru" target="_blank"><span class="visually-hidden">YouTube</span></a>
+      <a class="social__link" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+        <svg width="16" height="11" viewBox="0 0 16 11" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+          <path d="M15.67 1.67c-.1-.32-.27-.61-.51-.84-.25-.24-.56-.41-.9-.5C13.01 0 8 0 8 0 5.9-.02 3.8.08 1.74.32 1.4.4 1.1.58.84.82c-.24.24-.42.53-.51.85A19.4 19.4 0 0 0 0 5.34C0 6.56.1 7.79.33 9c.09.32.27.61.51.85.25.23.56.4.9.5 1.27.32 6.26.32 6.26.32 2.09.02 4.18-.08 6.26-.31.34-.09.65-.26.9-.5.24-.23.42-.52.5-.84.24-1.21.35-2.44.34-3.67.02-1.23-.1-2.46-.33-3.68ZM6.4 7.62V3.05l4.18 2.29L6.4 7.62Z"/>
+        </svg>
+        <span class="visually-hidden">YouTube</span>
+      </a>
     </li>
     <li class="social__item">
-      <a class="social__link" href="https://twitter.com/htmlacademy_ru" target="_blank"><span class="visually-hidden">Twitter</span></a>
+      <a class="social__link" href="https://twitter.com/htmlacademy_ru" target="_blank">
+        <svg width="16" height="14" viewBox="0 0 16 14" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+          <path d="M10.35.15c1.6-.5 2.77.3 3.41 1.1.53-.2 1.17-.4 1.81-.6a2 2 0 0 1-.85 1.6c.75.2 1.28-.4 1.28-.4-.1.9-.96 1.7-1.5 1.89-.2 6.27-2.98 10.36-9.49 10.26H4.6c-.32 0-3.95-.4-4.59-1.8 2.13.2 3.63-.4 4.37-1.09-.85-.3-2.56-.4-2.77-2.79.32.2.53.3 1.17.2C1.6 7.72.32 7.02.43 5.03c.32.3.96.5 1.28.4C1.07 5.23-.21 2.35.85.85c1.71 1.7 3.52 3.39 6.72 3.49C7.8 2.24 8.64.85 10.35.15Z"/>
+        </svg>
+        <span class="visually-hidden">Twitter</span>
+      </a>
     </li>
   </ul>
   <a class="copyright" href="https://htmlacademy.ru/" target="_blank">
