--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
           <a class="site-nav__link" href="catalog.html">Каталог товаров</a>
           <ul class="submenu">
             <li class="submenu__item">
-              <a class="submenu__link">Виртуальная реальность</a>
+              <a class="submenu__link" href="#">Виртуальная реальность</a>
             </li>
             <li class="submenu__item">
-              <a class="submenu__link">Моноподы для cелфи</a>
+              <a class="submenu__link" href="#">Моноподы для cелфи</a>
             </li>
             <li class="submenu__item">
-              <a class="submenu__link">Экшн-камеры</a>
+              <a class="submenu__link" href="#">Экшн-камеры</a>
             </li>
             <li class="submenu__item">
-              <a class="submenu__link">Фитнес-браслеты</a>
+              <a class="submenu__link" href="#">Фитнес-браслеты</a>
             </li>
             <li class="submenu__item">
-              <a class="submenu__link">Умные часы</a>
+              <a class="submenu__link" href="#">Умные часы</a>
             </li>
             <li class="submenu__item">
-              <a class="submenu__link">Квадрокоптеры</a>
+              <a class="submenu__link" href="#">Квадрокоптеры</a>
             </li>
           </ul>
         </li>
@@ -77,7 +77,7 @@
         <li class="slider__item">
           <h3 class="visually-hidden">Квадрокоптер.</h3>
           <img class="slider__img" src="image/content/quadrocopter.png" width="560" height="560" alt="Квадрокоптер с лазерным указателем.">
-          <p class="slider__title">Порхает как бабочка, жалит как пчела!</p>
+          <p class="slider__title main-title">Порхает как бабочка, жалит как пчела!</p>
           <p class="slider__description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
           <a class="slider__button button" href="#">Подробнее</a>
           <dl class="slider__features-list features-list">
@@ -90,7 +90,7 @@
         <li class="slider__item">
           <h3 class="visually-hidden">Фитнес-браслет.</h3>
           <img class="slider__img" src="image/content/watch.png" width="560" height="560" alt="Черный фитнес-браслет с ЖК дисплеем.">
-          <p class="slider__title">Худеем правильно!</p>
+          <p class="slider__title main-title">Худеем правильно!</p>
           <p class="slider__description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
           <a class="slider__button button" href="#">Подробнее</a>
           <dl class="slider__features-list features-list">
@@ -101,7 +101,7 @@
         <li class="slider__item">
           <h3 class="visually-hidden">Селфи палка.</h3>
           <img class="slider__img" src="image/content/monopods.png" width="560" height="560" alt="Три телескопические палки для селфи.">
-          <p class="slider__title">Делай селфи, как Бен Стиллер! </p>
+          <p class="slider__title main-title">Делай селфи, как Бен Стиллер! </p>
           <p class="slider__description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
           <a class="slider__button button" href="#">Подробнее</a>
           <dl class="slider__features-list features-list">
@@ -148,19 +148,19 @@
     <section class="services">
       <h2 class="visually-hidden">Сервисы</h2>
       <dl class="services__list">
-        <dt class="services__term">Доставка</dt>
+        <dt class="services__term services__term--current">Доставка</dt>
         <dd class="services__definition">
-          <h3 class="services__title">Доставка</h3>
+          <h3 class="services__title main-title">Доставка</h3>
           <p class="services__description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
         </dd>
         <dt class="services__term">Гарантия</dt>
         <dd class="services__definition">
-          <h3 class="services__title">Гарантия</h3>
+          <h3 class="services__title main-title">Гарантия</h3>
           <p class="services__description">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
         </dd>
         <dt class="services__term">Кредит</dt>
         <dd class="services__definition">
-          <h3 class="services__title">Кредит</h3>
+          <h3 class="services__title main-title">Кредит</h3>
           <p class="services__description">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
         </dd>
       </dl>
@@ -170,7 +170,7 @@
       <button class="delivery__button">Доставим редкий товар под заказ</button>
     </section>
     <section class="about">
-      <h2 class="about__title">О нас</h2>
+      <h2 class="about__title main-title">О нас</h2>
       <p class="about__text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
       <p class="about__text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
       <ul class="about__list">
@@ -181,7 +181,7 @@
       <a class="about__button button" href="#">Подробнее о нас</a>
     </section>
     <section class="contacts">
-      <h2 class="contacts__title">Контакты</h2>
+      <h2 class="contacts__title main-title">Контакты</h2>
       <p class="contacts__text">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.</p>
       <p class="contacts__subtitle">Интернет-магазин «Девайс»</p>
       <address class="contacts__text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
@@ -191,7 +191,7 @@
       <a class="contacts__button button" href="mailto:info@device.shop">Напишите нам</a>
     </section>
     <section class="subscribe">
-      <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
+      <h2 class="subscribe__title main-title">Подпишитесь на рассылку</h2>
       <p class="subscribe__description">Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
       <form class="subscribe__form" action="https://echo.htmlacademy.ru/courses" method="post">
         <label class="visually-hidden" for="subscriber-email">Введите email.</label>
@@ -224,13 +224,28 @@
     <span class="separator"></span>
     <ul class="social">
       <li class="social__item">
-        <a class="social__link" href="https://t.me/htmlacademy" target="_blank"><span class="visually-hidden">Telegram</span></a>
+        <a class="social__link" href="https://t.me/htmlacademy" target="_blank">
+          <svg width="14" height="12" viewBox="0 0 14 12" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12.44.07.62 4.63c-.8.33-.8.78-.14.98l3.03.94 7.02-4.43c.33-.2.64-.09.39.13l-5.7 5.13-.2 3.13c.3 0 .44-.14.61-.3l1.48-1.44 3.06 2.27c.57.31.97.15 1.12-.53l2-9.48c.21-.83-.3-1.2-.85-.96Z"/>
+          </svg>
+          <span class="visually-hidden">Telegram</span>
+        </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="https://www.youtube.com/user/htmlacademyru" target="_blank"><span class="visually-hidden">YouTube</span></a>
+        <a class="social__link" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+          <svg width="16" height="11" viewBox="0 0 16 11" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M15.67 1.67c-.1-.32-.27-.61-.51-.84-.25-.24-.56-.41-.9-.5C13.01 0 8 0 8 0 5.9-.02 3.8.08 1.74.32 1.4.4 1.1.58.84.82c-.24.24-.42.53-.51.85A19.4 19.4 0 0 0 0 5.34C0 6.56.1 7.79.33 9c.09.32.27.61.51.85.25.23.56.4.9.5 1.27.32 6.26.32 6.26.32 2.09.02 4.18-.08 6.26-.31.34-.09.65-.26.9-.5.24-.23.42-.52.5-.84.24-1.21.35-2.44.34-3.67.02-1.23-.1-2.46-.33-3.68ZM6.4 7.62V3.05l4.18 2.29L6.4 7.62Z"/>
+          </svg>
+          <span class="visually-hidden">YouTube</span>
+        </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="https://twitter.com/htmlacademy_ru" target="_blank"><span class="visually-hidden">Twitter</span></a>
+        <a class="social__link" href="https://twitter.com/htmlacademy_ru" target="_blank">
+          <svg width="16" height="14" viewBox="0 0 16 14" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10.35.15c1.6-.5 2.77.3 3.41 1.1.53-.2 1.17-.4 1.81-.6a2 2 0 0 1-.85 1.6c.75.2 1.28-.4 1.28-.4-.1.9-.96 1.7-1.5 1.89-.2 6.27-2.98 10.36-9.49 10.26H4.6c-.32 0-3.95-.4-4.59-1.8 2.13.2 3.63-.4 4.37-1.09-.85-.3-2.56-.4-2.77-2.79.32.2.53.3 1.17.2C1.6 7.72.32 7.02.43 5.03c.32.3.96.5 1.28.4C1.07 5.23-.21 2.35.85.85c1.71 1.7 3.52 3.39 6.72 3.49C7.8 2.24 8.64.85 10.35.15Z"/>
+          </svg>
+          <span class="visually-hidden">Twitter</span>
+        </a>
       </li>
     </ul>
     <a class="copyright" href="https://htmlacademy.ru/" target="_blank">
