Объединены падинги, Добавлена фавиконка, Убран закоментирванный код

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="image/favicon.png">
   <title>Каталог | Интернет-магазин гаджетов &laquo;Device&raquo;</title>
 </head>
 <body class="page">
@@ -244,9 +246,7 @@
             <h3 class="product__title">Любительская селфи-палка</h3>
           </a>
           <p class="product__price">500 ₽</p>
-
           <a class="product__button button" href="#">Подробнее</a>
-
         </article>
         <article class="product ">
           <a class="product__link product__link--img" href="#">
@@ -256,9 +256,7 @@
             <h3 class="product__title">Профессиональная селфи-палка</h3>
           </a>
           <p class="product__price">1 500 ₽</p>
-
           <a class="product__button button" href="#">Подробнее</a>
-
         </article>
         <article class="product">
           <a class="product__link  product__link--img" href="#">
@@ -268,9 +266,7 @@
             <h3 class="product__title">Непотопляемая селфи-палка</h3>
           </a>
           <p class="product__price">2 500 ₽</p>
-
           <a class="product__button button" href="#">Подробнее</a>
-
         </article>
         <article class="product">
           <a class="product__link  product__link--img" href="#">
@@ -280,9 +276,7 @@
             <h3 class="product__title">Селфи-палка «Следуй за мной»</h3>
           </a>
           <p class="product__price">1 500 ₽</p>
-
           <a class="product__button button" href="#">Подробнее</a>
-
         </article>
         <a class="products__more" href="#">Загрузить ещё</a>
         <div class="pagination">
