--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="image/favicon.png">
   <title>Интернет-магазин гаджетов &laquo;Device&raquo;</title>
 </head>
 <body class="page">
@@ -48,6 +50,7 @@
           </li>
           <li class="user-nav__item user-nav__item--cart">
             <a class="user-nav__link user-nav__link--cart" href="#">
+              <span class="visually-hidden">Количество товаров: </span>
               <span class="user-nav__count">2</span>
               <svg class="user-nav__icon" width="16" height="14" viewBox="0 0 16 14" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                 <path d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z"/>
